Updated build to build against LTS versions of Java